--- a/activities/activity2/ta-dashboard.html
+++ b/activities/activity2/ta-dashboard.html
@@ -172,7 +172,7 @@
             <div class="banner-overlay">
                 <div class="nav-links">
                     <a href="../../index.html" class="nav-link">← Back to Course Home</a>
-                    <a href="../../activities.html" class="nav-link">← Back to Activities</a>
+                    <a href="../index.html" class="nav-link">← Back to Activities</a>
                     <a href="index.html" class="nav-link">← Back to Create Index</a>
                 </div>
                 <h1 class="text-4xl font-bold text-white mb-2">TA Dashboard - Alternative GDP Index Rankings</h1>
