--- a/activities/index.html
+++ b/activities/index.html
@@ -210,6 +210,7 @@
                         <a href="activity4a/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
                         <a href="activity4a/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
                         <a href="activity4a/single-player.html" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Single Player</a>
+                        <a href="activity4a/leaderboard.html" class="inline-block bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700">Leaderboard</a>
                     </div>
                 </div>
             </div>
