--- a/activities/activity4a/index.html
+++ b/activities/activity4a/index.html
@@ -4,16 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investment Odyssey - Activity 4A</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/header-styles.css">
+    <link rel="stylesheet" href="../../styles.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
-<body>
+<body class="bg-gray-50">
+    <!-- Header -->
+    <header>
+        <div class="banner-container">
+            <img src="../../images/banner14.png" alt="Investment Odyssey Banner" class="banner-image">
+            <div class="banner-overlay">
+                <div class="container mx-auto">
+                    <div class="nav-links">
+                        <a href="../../index.html" class="nav-link">← Back to Course Home</a>
+                        <a href="../index.html" class="nav-link">← Back to Activities</a>
+                    </div>
+                    <h1 class="activity-title">Discussion Activity 4A: Investment Odyssey</h1>
+                    <p class="activity-date">May 20-23, 2025</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <div class="container mt-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1>Investment Odyssey</h1>
                 <p class="lead">Welcome to the Investment Odyssey game! Dive into the world of virtual economics, navigate the volatile waves of the market, and strategize your trades.</p>
             </div>
         </div>
