--- a/activities/activity4a/single-player.html
+++ b/activities/activity4a/single-player.html
@@ -4,21 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Player - Investment Odyssey</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/header-styles.css">
+    <link rel="stylesheet" href="../../styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h1>Single Player Mode - Investment Odyssey</h1>
-                <p class="lead">Practice your investment skills in this single player simulation</p>
-                <a href="index.html" class="btn btn-secondary mb-4">Back to Home</a>
-                <a href="leaderboard.html" class="btn btn-warning mb-4 ml-2">View Leaderboard</a>
+<body class="bg-gray-50">
+    <!-- Header -->
+    <header>
+        <div class="banner-container">
+            <img src="../../images/banner15git.png" alt="Investment Odyssey Banner" class="banner-image">
+            <div class="banner-overlay">
+                <div class="container mx-auto">
+                    <div class="nav-links">
+                        <a href="../../index.html" class="nav-link">← Back to Course Home</a>
+                        <a href="../index.html" class="nav-link">← Back to Activities</a>
+                        <a href="index.html" class="nav-link">← Back to Game Home</a>
+                    </div>
+                    <h1 class="activity-title">Investment Odyssey: Single Player Mode</h1>
+                    <p class="activity-date">Practice your investment skills in this single player simulation</p>
+                </div>
             </div>
         </div>
+    </header>
+
+    <!-- Navigation Links -->
+    <div class="flex mb-8 border-b container mx-auto mt-4">
+        <a href="index.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">Game Home</a>
+        <a href="single-player.html" class="step-nav font-medium px-4 py-2 border-b-2 border-blue-600 text-blue-600">Single Player</a>
+        <a href="leaderboard.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">Leaderboard</a>
+        <a href="ta-dashboard.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">TA Dashboard</a>
+    </div>
+
+    <div class="container">
 
         <!-- Asset Price Ticker -->
         <div class="row mb-4">
