--- a/activities/activity4a/index.html
+++ b/activities/activity4a/index.html
@@ -30,7 +30,15 @@
         </div>
     </header>
 
-    <div class="container mt-5">
+    <!-- Navigation Links -->
+    <div class="flex mb-8 border-b container mx-auto mt-4">
+        <a href="index.html" class="step-nav font-medium px-4 py-2 border-b-2 border-blue-600 text-blue-600">Game Home</a>
+        <a href="single-player.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">Single Player</a>
+        <a href="leaderboard.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">Leaderboard</a>
+        <a href="ta-dashboard.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">TA Dashboard</a>
+    </div>
+
+    <div class="container">
         <div class="row">
             <div class="col-12 text-center">
                 <p class="lead">Welcome to the Investment Odyssey game! Dive into the world of virtual economics, navigate the volatile waves of the market, and strategize your trades.</p>
