--- a/activities/activity4/index.html
+++ b/activities/activity4/index.html
@@ -114,11 +114,13 @@
         </div>
     </div>
 
-    <!-- Step Navigation -->
+    <!-- Navigation Links -->
     <div class="flex mb-8 border-b">
         <button id="nav-instructions" class="step-nav font-medium px-4 py-2 border-b-2 border-blue-600 text-blue-600">1. Instructions</button>
         <button id="nav-game" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">2. Play Game</button>
         <button id="nav-analysis" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">3. Analysis</button>
+        <a href="ta-dashboard.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">TA Dashboard</a>
+        <button id="reset-game" class="ml-auto font-medium px-4 py-2 text-white bg-red-600 rounded-md hover:bg-red-700">Reset Game</button>
     </div>
 
     <!-- Instructions Step -->
