--- a/activities/index.html
+++ b/activities/index.html
@@ -207,10 +207,11 @@
                         <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Portfolio Management</span>
                     </div>
                     <div class="mt-4 space-y-2">
-                        <a href="activity4a/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
-                        <a href="activity4a/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
+                        <a href="activity4a/front-page.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
                         <a href="activity4a/single-player.html" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Single Player</a>
+                        <a href="activity4a/index.html" class="inline-block bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">Class Game</a>
                         <a href="activity4a/leaderboard.html" class="inline-block bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700">Leaderboard</a>
+                        <a href="activity4a/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
                     </div>
                 </div>
             </div>
