--- a/activities/activity4a/front-page.html
+++ b/activities/activity4a/front-page.html
@@ -6,6 +6,7 @@
     <title>Investment Odyssey - Welcome</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/header-styles.css">
     <link rel="stylesheet" href="../../styles.css">
@@ -14,7 +15,7 @@
     <!-- Header -->
     <header>
         <div class="banner-container">
-            <img src="../../images/banner10.png" alt="Investment Odyssey Banner" class="banner-image">
+            <img src="../../images/banner16.png" alt="Investment Odyssey Banner" class="banner-image">
             <div class="banner-overlay">
                 <div class="container mx-auto">
                     <div class="nav-links">
@@ -48,10 +49,14 @@
         <div class="row mb-5">
             <div class="col-md-6 mb-4">
                 <div class="card h-100 shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h3>Single Player Mode</h3>
+                    </div>
                     <div class="card-body text-center">
-                        <h3 class="card-title mb-4">Single Player Mode</h3>
                         <p class="card-text mb-4">Practice your investment skills at your own pace. Experiment with different strategies and compete for a spot on the leaderboard.</p>
-                        <img src="../../images/single-player-icon.png" alt="Single Player" class="img-fluid mb-4" style="max-height: 150px; margin: 0 auto;">
+                        <div class="mb-4">
+                            <i class="fas fa-user-circle fa-6x text-primary"></i>
+                        </div>
                         <div class="mt-auto">
                             <a href="single-player.html" class="btn btn-primary btn-lg">Play Single Player</a>
                         </div>
@@ -60,10 +65,14 @@
             </div>
             <div class="col-md-6 mb-4">
                 <div class="card h-100 shadow-sm">
+                    <div class="card-header bg-success text-white">
+                        <h3>Class Game Mode</h3>
+                    </div>
                     <div class="card-body text-center">
-                        <h3 class="card-title mb-4">Class Game Mode</h3>
                         <p class="card-text mb-4">Join your classmates in a competitive investment environment. Trade assets, respond to market changes, and see how you rank against your peers.</p>
-                        <img src="../../images/class-game-icon.png" alt="Class Game" class="img-fluid mb-4" style="max-height: 150px; margin: 0 auto;">
+                        <div class="mb-4">
+                            <i class="fas fa-users fa-6x text-success"></i>
+                        </div>
                         <div class="mt-auto">
                             <a href="index.html" class="btn btn-success btn-lg" id="class-game-btn">Join Class Game</a>
                         </div>
@@ -95,48 +104,63 @@
                     <div class="card-body">
                         <p>Track your performance against historical market averages:</p>
                         <div class="table-responsive">
-                            <table class="table table-sm">
-                                <thead>
+                            <table class="table table-sm table-striped">
+                                <thead class="thead-light">
                                     <tr>
                                         <th>Asset</th>
-                                        <th>Avg. Annual Return</th>
-                                        <th>Volatility</th>
+                                        <th>Avg. Return</th>
+                                        <th>Std. Dev.</th>
+                                        <th>Min</th>
+                                        <th>Max</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <td>S&P 500</td>
-                                        <td class="text-success">+7-10%</td>
-                                        <td>Medium</td>
+                                        <td class="text-success">+11.51%</td>
+                                        <td>19.49%</td>
+                                        <td class="text-danger">-43.00%</td>
+                                        <td class="text-success">+50.00%</td>
                                     </tr>
                                     <tr>
                                         <td>Bonds</td>
-                                        <td class="text-success">+3-5%</td>
-                                        <td>Low</td>
+                                        <td class="text-success">+3.34%</td>
+                                        <td>3.01%</td>
+                                        <td class="text-success">+0.03%</td>
+                                        <td class="text-success">+14.00%</td>
                                     </tr>
                                     <tr>
                                         <td>Real Estate</td>
-                                        <td class="text-success">+5-8%</td>
-                                        <td>Medium</td>
+                                        <td class="text-success">+4.39%</td>
+                                        <td>6.20%</td>
+                                        <td class="text-danger">-12.00%</td>
+                                        <td class="text-success">+24.00%</td>
                                     </tr>
                                     <tr>
                                         <td>Gold</td>
-                                        <td class="text-success">+2-6%</td>
-                                        <td>Medium-High</td>
+                                        <td class="text-success">+6.48%</td>
+                                        <td>20.76%</td>
+                                        <td class="text-danger">-32.00%</td>
+                                        <td class="text-success">+125.00%</td>
                                     </tr>
                                     <tr>
                                         <td>Commodities</td>
-                                        <td class="text-success">+3-7%</td>
-                                        <td>High</td>
+                                        <td class="text-success">+8.15%</td>
+                                        <td>15.22%</td>
+                                        <td class="text-danger">-25.00%</td>
+                                        <td class="text-success">+200.00%</td>
                                     </tr>
                                     <tr>
                                         <td>Bitcoin</td>
-                                        <td class="text-success">+15-25%</td>
-                                        <td>Very High</td>
+                                        <td class="text-success">+50.00%</td>
+                                        <td>100.00%</td>
+                                        <td class="text-danger">-73.00%</td>
+                                        <td class="text-success">+450.00%</td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
+                        <p class="text-muted small mt-2">Note: These are the actual parameters used in the simulation. Returns are shown as percentages (e.g., +11.51% means a multiplier of 1.1151). Past performance is not indicative of future results.</p>
                     </div>
                 </div>
             </div>
@@ -145,8 +169,10 @@
         <div class="row">
             <div class="col-12">
                 <div class="card shadow-sm">
+                    <div class="card-header bg-secondary text-white">
+                        <h3>How to Play</h3>
+                    </div>
                     <div class="card-body">
-                        <h3 class="card-title">How to Play</h3>
                         <p>Investment Odyssey is a simulation game that teaches the fundamentals of investment and portfolio management. Here's how to get started:</p>
                         <div class="row">
                             <div class="col-md-6">
