--- a/activities/activity4a/front-page.html
+++ b/activities/activity4a/front-page.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/header-styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="../../styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
@@ -104,7 +106,7 @@
                     <div class="card-body">
                         <p>Track your performance against historical market averages:</p>
                         <div class="table-responsive">
-                            <table class="table table-sm table-striped">
+                            <table class="table table-sm table-striped asset-stats-table">
                                 <thead class="thead-light">
                                     <tr>
                                         <th>Asset</th>
