--- a/games/investment-odyssey/index.html
+++ b/games/investment-odyssey/index.html
@@ -24,7 +24,8 @@
                 <div class="container mx-auto">
                     <div class="nav-links">
                         <a href="../../index.html" class="nav-link">← Back to Course Home</a>
-                        <a href="../index.html" class="nav-link">← Back to Activities</a>
+                        <a href="../index.html" class="nav-link">← Back to Games</a>
+                        <a href="front-page.html" class="nav-link">← Back to Game Home</a>
                     </div>
                     <h1 class="activity-title">Discussion Activity 4A: Investment Odyssey</h1>
                     <p class="activity-date">May 20-23, 2025</p>
@@ -40,6 +41,7 @@
         <a href="index.html" class="step-nav font-medium px-4 py-2 border-b-2 border-blue-600 text-blue-600">Class Game</a>
         <a href="leaderboard.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">Leaderboard</a>
         <a href="ta-dashboard.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">TA Dashboard</a>
+        <a href="../index.html" class="step-nav font-medium px-4 py-2 border-b-2 border-transparent text-gray-500">All Games</a>
     </div>
 
     <div class="container">
