--- a/activities/index.html
+++ b/activities/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Discussion Activities - Principles of Macroeconomics</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <style>
   .banner-container {
     position: relative;
@@ -106,6 +109,112 @@
 
     <!-- Main Content -->
     <main class="container mx-auto py-8 px-4">
+        <!-- Games Login Container -->
+        <div class="bg-white rounded-lg shadow-md overflow-hidden mb-8">
+            <div class="h-2 bg-purple-600"></div>
+            <div class="p-6">
+                <h2 class="text-2xl font-medium mb-4">Economics Games Hub</h2>
+                <p class="text-gray-600 mb-6">Access all interactive economics games from one place. Play as a guest or sign in to join your class.</p>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
+                    <!-- Game Cards -->
+                    <div class="bg-gray-50 rounded-lg p-4 border border-gray-200">
+                        <h3 class="text-xl font-medium mb-2">Fiscal Balance Game</h3>
+                        <p class="text-gray-600 mb-4">Balance the federal budget by adjusting spending and taxation policies.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <a href="activity4/index.html" class="inline-block bg-blue-600 text-white px-3 py-1 rounded text-sm hover:bg-blue-700">Play Now</a>
+                            <a href="activity4/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-3 py-1 rounded text-sm hover:bg-gray-700">TA Dashboard</a>
+                        </div>
+                    </div>
+
+                    <div class="bg-gray-50 rounded-lg p-4 border border-gray-200">
+                        <h3 class="text-xl font-medium mb-2">Investment Odyssey</h3>
+                        <p class="text-gray-600 mb-4">Manage an investment portfolio and navigate market volatility.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <a href="activity4a/single-player.html" class="inline-block bg-green-600 text-white px-3 py-1 rounded text-sm hover:bg-green-700">Single Player</a>
+                            <a href="activity4a/leaderboard.html" class="inline-block bg-yellow-600 text-white px-3 py-1 rounded text-sm hover:bg-yellow-700">Leaderboard</a>
+                            <a href="activity4a/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-3 py-1 rounded text-sm hover:bg-gray-700">TA Dashboard</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Login Section -->
+                <div class="border-t border-gray-200 pt-6">
+                    <h3 class="text-lg font-medium mb-4">Join a Class Game</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div>
+                            <div id="auth-status" class="hidden">
+                                <div class="bg-green-50 border-l-4 border-green-400 p-4 mb-4">
+                                    <div class="flex">
+                                        <div class="flex-shrink-0">
+                                            <i class="fas fa-check-circle text-green-400"></i>
+                                        </div>
+                                        <div class="ml-3">
+                                            <p class="text-sm text-green-700">
+                                                Logged in as <strong id="current-user-name"></strong>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="space-y-4">
+                                    <div>
+                                        <label for="game-select-logged-in" class="block text-sm font-medium text-gray-700 mb-1">Select Game</label>
+                                        <select id="game-select-logged-in" class="w-full px-3 py-2 border border-gray-300 rounded-md bg-white">
+                                            <option value="">Choose a game...</option>
+                                            <option value="fiscal">Fiscal Balance Game</option>
+                                            <option value="investment">Investment Odyssey</option>
+                                        </select>
+                                    </div>
+                                    <div class="flex space-x-3">
+                                        <button id="play-game-btn" class="flex-1 bg-purple-600 text-white py-2 px-4 rounded hover:bg-purple-700">Play Game</button>
+                                        <button id="logout-btn" class="px-4 py-2 border border-gray-300 rounded text-gray-700 hover:bg-gray-100">Logout</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="auth-buttons" class="space-y-4">
+                                <p class="text-gray-600">Choose how you want to play:</p>
+                                <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+                                    <button id="login-btn" class="flex items-center justify-center bg-blue-600 text-white py-3 px-4 rounded hover:bg-blue-700">
+                                        <i class="fas fa-sign-in-alt mr-2"></i> Login
+                                    </button>
+                                    <button id="register-btn" class="flex items-center justify-center bg-green-600 text-white py-3 px-4 rounded hover:bg-green-700">
+                                        <i class="fas fa-user-plus mr-2"></i> New Student
+                                    </button>
+                                </div>
+                                <div class="text-center">
+                                    <span class="text-gray-500">- or -</span>
+                                </div>
+                                <div>
+                                    <label for="game-select" class="block text-sm font-medium text-gray-700 mb-1">Play Without Login</label>
+                                    <select id="game-select" class="w-full px-3 py-2 border border-gray-300 rounded-md bg-white mb-3">
+                                        <option value="">Choose a game...</option>
+                                        <option value="fiscal">Fiscal Balance Game</option>
+                                        <option value="investment">Investment Odyssey</option>
+                                    </select>
+                                    <button id="play-single-btn" class="w-full bg-gray-600 text-white py-2 px-4 rounded hover:bg-gray-700">
+                                        <i class="fas fa-user mr-2"></i> Play Single Player
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bg-purple-50 p-4 rounded-lg border border-purple-200">
+                            <h4 class="font-medium text-purple-800 mb-2">Why Join a Class?</h4>
+                            <ul class="text-sm text-purple-700 space-y-2 ml-5 list-disc">
+                                <li>Compete with classmates on the leaderboard</li>
+                                <li>Save your progress between sessions</li>
+                                <li>Access class-specific scenarios</li>
+                                <li>Get personalized feedback from your TA</li>
+                            </ul>
+                            <p class="text-sm text-purple-700 mt-4">Ask your TA for the class passcode to join.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Activity Cards -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- Activity 1 Card -->
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
@@ -171,50 +280,9 @@
                 </div>
             </div>
 
-            <!-- Activity 4 Card -->
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                <div class="h-2 bg-blue-600"></div>
-                <div class="p-6">
-                    <h3 class="text-xl font-medium mb-2">Fiscal Balance Game</h3>
-                    <p class="text-gray-600 mb-4">Manage a nation's economy by making critical decisions about taxation, spending, and debt management.</p>
-                    <div class="flex items-center text-sm text-gray-500 mb-3">
-                        <span>May 13-16, 2025</span>
-                    </div>
-                    <div class="flex flex-wrap gap-1 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Fiscal Policy</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Debt Management</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Economic Simulation</span>
-                    </div>
-                    <div class="mt-4 space-y-2">
-                        <a href="activity4/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
-                        <a href="activity4/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
-                    </div>
-                </div>
-            </div>
 
-            <!-- Activity 4A Card -->
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                <div class="h-2 bg-blue-600"></div>
-                <div class="p-6">
-                    <h3 class="text-xl font-medium mb-2">Investment Odyssey</h3>
-                    <p class="text-gray-600 mb-4">Manage an investment portfolio and navigate market volatility in this interactive simulation.</p>
-                    <div class="flex items-center text-sm text-gray-500 mb-3">
-                        <span>May 20-23, 2025</span>
-                    </div>
-                    <div class="flex flex-wrap gap-1 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Investments</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Market Volatility</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Portfolio Management</span>
-                    </div>
-                    <div class="mt-4 space-y-2">
-                        <a href="activity4a/front-page.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
-                        <a href="activity4a/single-player.html" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Single Player</a>
-                        <a href="activity4a/index.html" class="inline-block bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">Class Game</a>
-                        <a href="activity4a/leaderboard.html" class="inline-block bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700">Leaderboard</a>
-                        <a href="activity4a/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
-                    </div>
-                </div>
-            </div>
+
+
         </div>
     </main>
 
@@ -224,5 +292,84 @@
             <p class="text-gray-600"> 2025 Economics Department</p>
         </div>
     </footer>
+
+    <script src="js/firebase-config.js"></script>
+    <script src="js/student-auth.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Check if user is logged in
+            if (StudentAuth.isLoggedIn()) {
+                // Show logged in view
+                const user = StudentAuth.getCurrentUser();
+                document.getElementById('current-user-name').textContent = user.studentName;
+                document.getElementById('auth-status').classList.remove('hidden');
+                document.getElementById('auth-buttons').classList.add('hidden');
+            } else {
+                // Show login/register buttons
+                document.getElementById('auth-status').classList.add('hidden');
+                document.getElementById('auth-buttons').classList.remove('hidden');
+            }
+
+            // Register button
+            document.getElementById('register-btn').addEventListener('click', function() {
+                StudentAuth.showRegistrationModal();
+            });
+
+            // Login button
+            document.getElementById('login-btn').addEventListener('click', function() {
+                StudentAuth.showLoginModal();
+            });
+
+            // Logout button
+            document.getElementById('logout-btn').addEventListener('click', function() {
+                StudentAuth.logout();
+            });
+
+            // Play game button (logged in)
+            document.getElementById('play-game-btn').addEventListener('click', function() {
+                const gameType = document.getElementById('game-select-logged-in').value;
+
+                if (!gameType) {
+                    alert('Please select a game');
+                    return;
+                }
+
+                // Redirect to the appropriate game
+                if (gameType === 'fiscal') {
+                    window.location.href = 'activity4/index.html';
+                } else if (gameType === 'investment') {
+                    window.location.href = 'activity4a/index.html';
+                }
+            });
+
+            // Play single player button
+            document.getElementById('play-single-btn').addEventListener('click', function() {
+                const gameType = document.getElementById('game-select').value;
+
+                if (!gameType) {
+                    alert('Please select a game');
+                    return;
+                }
+
+                // Clear any existing session
+                SessionManager.clearSession();
+
+                // Set single player mode
+                localStorage.setItem('singlePlayerMode', 'true');
+
+                // Redirect to the appropriate game
+                if (gameType === 'fiscal') {
+                    window.location.href = 'activity4/index.html';
+                } else if (gameType === 'investment') {
+                    window.location.href = 'activity4a/single-player.html';
+                }
+            });
+
+            // Set callback for auth success
+            window.onAuthSuccess = function(userData) {
+                console.log('Authentication successful:', userData);
+            };
+        });
+    </script>
 </body>
 </html>
